--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <div class="container">
-    <h1>SCG Bibliography Search</h1>
+    <h1><a href="http://scg.unibe.ch">SCG</a> Bibliography Search</h1>
 
       <div class="row mt-4">
         <div class="col">
