--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
       <!-- Bootstrap CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="stylesheet" href="resources/styles.css">
+      <link rel="stylesheet" href="resources/droidsans.css">
       <title>SCG Bibliography Search</title>
    </head>
    <body>
+    
+		<div id="header" role="banner">
       <div class="container">
-      <h1><a href="http://scg.unibe.ch">SCG</a> Bibliography Search</h1>
+      <div id="title">
+				<h1><a href="http://scg.unibe.ch">SCG</a> Bibliography Search</h1>
+				</div>
+			</div>
+		</div>
+		
+      <div class="container">
       <div class="row mt-4">
          <div class="col">
             <form id="form" action="" method="GET" class="d-flex" >
