link whole header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div id="header" role="banner">
       <div class="container">
       <div id="title">
-				<h1><a href="http://scg.unibe.ch">SCG</a> Bibliography Search</h1>
+				<h1><a href="http://scg.unibe.ch">SCG Bibliography Search</a></h1>
 				</div>
 			</div>
 		</div>
