--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                  {{#if (equals type "misc")}} {{joinToEnd ', ' AUTHOR TITLE HOWPUBLISHED (join '' MONTH ' ' YEAR) NOTE }}{{/if}}
                                  {{#if (equals type "phdthesis")}} {{joinToEnd ', '  AUTHOR TITLE TYPE SCHOOL ADDRESS (join '' MONTH ' ' YEAR) NOTE }} {{/if}}
                                  {{#if (equals type "proceedings")}} {{joinToEnd ', ' BOOKTITLE EDITOR PUBLISHER ORGANIZATION ADDRESS (join '' MONTH ' ' YEAR) NOTE}} {{/if}}
-                                 {{#if (equals type "techreport")}} {{joinToEnd ', ' AUTHOR TITLE (join '' '*Technical Report*') NUMBER INSTITUTION (join '' MONTH ' ' YEAR) TYPE ADDRESS NOTE  }}{{/if}}
+                                 {{#if (equals type "techreport")}} {{joinToEnd ', ' AUTHOR TITLE (join '' 'Technical Report') NUMBER INSTITUTION (join '' MONTH ' ' YEAR) TYPE ADDRESS NOTE  }}{{/if}}
                                  {{#if (equals type "unpublished")}} {{joinToEnd ', ' AUTHOR TITLE (join '' MONTH ' ' YEAR) NOTE }} {{/if}}
                                  {{citationLink key}}
                                  {{~#if URL}} &nbsp {{pdfLink URL}} {{/if}}
