Updated footer text

--- a/index.html
+++ b/index.html
@@ -126,9 +126,7 @@
 
       <div id="footer">
           <div class="container">
-              <p>
-                  Raw data are hosted on <a href="https://github.com/scgbern/scgbib">github</a>.
-              </p>
+              <p>The source bibliography data are available on <a href="https://github.com/scgbern/scgbib">github</a>.</p>
           </div>
       </div>
 
