--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
       <link rel="stylesheet" href="resources/styles.css">
       <link rel="stylesheet" href="resources/droidsans.css">
       <title>SCG Bibliography Search</title>
+	  <!-- Google tag (gtag.js) -->
+	  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1PY8TZMCDN"></script>
+	  <script>
+	    window.dataLayer = window.dataLayer || [];
+	    function gtag(){dataLayer.push(arguments);}
+	    gtag('js', new Date());
+	    gtag('config', 'G-1PY8TZMCDN');
+	  </script>
    </head>
    <body>
     
